--- a/travelRecommendation/contactUs.css
+++ b/travelRecommendation/contactUs.css
@@ -12,7 +12,6 @@ body {
   padding: 0;
   overflow: none;
 }
-
 /* Nav Section */
 
 nav {
@@ -50,62 +49,19 @@ div.logo {
   color: #dedcef;
 }
 
-input[type="text"] {
-  width: 350px;
-  height: 30px;
-  border-radius: 20px;
-  border: 1.5px solid #483d8b;
-  font-size: 1em;
-  padding-left: 10px;
-  font-size: 0.8em;
-  font-style: italic;
-  cursor: pointer;
-  overflow: none;
-}
-
-.searchBar {
-  display: flex;
-  gap: 10px;
-}
-
-button {
-  border-radius: 10px;
-  border: 0;
-  font-size: 0.8em;
-  color: white;
-  background-color: #483d8b;
-}
-
-button:hover {
-  background-color: white;
-  border: 0;
-  color: #483d8b;
-}
-
 /* Main Section */
 
-#mainSection {
+#aboutUsMain {
   background-image: url("/travelRecommendation/images/City.jpg");
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: start;
-  gap: 50px;
-  overflow: none;
+  align-items: center;
+  gap: 20px;
+  height: 100vh;
 }
 
-div.main {
-  width: 600px;
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-}
-
-div#sideNav {
+#aboutSideNav {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -115,6 +71,7 @@ div#sideNav {
   height: 300px;
   background-color: #483d8b;
   border: 0;
+  padding: 5px;
 }
 
 div.socials {
@@ -131,17 +88,71 @@ h1 {
 h2 {
   color: #dedcef;
   font-size: 2em;
+  padding: 15px;
 }
 
-p {
+h3 {
+  font-size: 1em;
+}
+.companyInfo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.aboutInfo {
+  font-size: 1em;
+  width: 100%;
+  margin: 15px;
   background-color: rgb(206, 202, 232);
   opacity: 0.8;
   color: #000;
   padding: 5px;
 }
 
-p.blurb {
-  font-size: 1em;
+button#bookNow {
+  width: 100px;
+  height: 25px;
+  align-self: flex-end;
+}
+
+/* Card */
+
+.employeeCards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.cardTitle {
+  margin: 15px;
+  background-color: #dedcef;
+  width: 270px;
+  line-height: 35px;
+  padding: 2px;
+}
+
+.card {
+  width: 250px;
+  margin: 15px;
+  border: none;
+  background-color: #dedcef;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.employeeInfo {
+  font-weight: 700;
+  font-size: 0.8em;
+}
+
+.employeeIcon {
+  width: 50px;
+  height: 50px;
 }
 
 /* Media Queries */
@@ -152,17 +163,22 @@ p.blurb {
     padding: 0 5px;
   }
 
-  input[type="text"] {
-    font-size: 0.5em;
-  }
-
-  button {
-    width: 50px;
-  }
-
   span.title {
     font-size: 0.8em;
   }
+}
+
+.companyInfo {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+p.aboutInfo {
+  font-size: 1em;
+  width: 100%;
+  margin: 15px;
 }
 
 @media screen and (max-width: 768px) {
@@ -172,36 +188,12 @@ p.blurb {
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    height: 75px;
+    height: 25px;
   }
 
   nav a {
     font-size: 0.6em;
     padding: 10px 5px;
-  }
-
-  input[type="text"] {
-    width: 100px;
-    font-size: 0.4em;
-  }
-
-  div button {
-    height: 30px;
-    padding: 2px;
-    border-radius: 5px;
-    font-size: 0.6em;
-  }
-
-  div.searchBar,
-  .logo,
-  .links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 35px;
-    gap: 10px;
   }
 
   div.logo {
