--- a/travelRecommendation/aboutUs.css
+++ b/travelRecommendation/aboutUs.css
@@ -58,7 +58,6 @@ div.logo {
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
-  height: 100vh;
 }
 
 #aboutSideNav {
@@ -94,6 +93,12 @@ h2 {
 h3 {
   font-size: 1em;
 }
+
+.about {
+  display: flex;
+  flex-direction: column;
+}
+
 .companyInfo {
   width: 100%;
   display: flex;
@@ -134,6 +139,11 @@ button#bookNow {
   padding: 2px;
 }
 
+.cards {
+  display: flex;
+  flex-direction: row;
+}
+
 .card {
   width: 250px;
   margin: 15px;
@@ -172,13 +182,18 @@ button#bookNow {
   width: 75%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
-p.aboutInfo {
+.aboutInfo {
   font-size: 1em;
   width: 100%;
   margin: 15px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
@@ -202,5 +217,22 @@ p.aboutInfo {
 
   span.title {
     font-size: 0.8em;
+  }
+
+  #aboutUsMain {
+    height: 100%;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
